# VividText

./: Cargo.toml  README.md  Rustでグラデーションのある文字を実装したい.md  like.text
src/: README.md  cmd.rs  lib.rs  main.rs  やることリスト.md
src/test/: cmd_test.rs
